<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"

            >

            <ImageView
                android:id="@+id/im1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:srcCompat="@mipmap/eg"


                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/tc11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="name"
                android:hint="@string/player1"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tc12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/victories"


                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/green"
            >

        </LinearLayout>


        <LinearLayout
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/im2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/tank_foreground"
                tools:srcCompat="@tools:sample/avatars"

                />

            <EditText
                android:id="@+id/tc21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="name"
                android:hint="@string/player2"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tc22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/victories"


                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:orientation="horizontal"
        android:background="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/info"
        >

    </LinearLayout>

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:text="@string/t1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/b1"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/b2"
        app:layout_constraintStart_toStartOf="parent"

        />

    <Button
        android:id="@+id/b2"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""
        app:layout_constraintTop_toTopOf="@+id/b1"
        app:layout_constraintEnd_toStartOf="@+id/b3"
        app:layout_constraintStart_toEndOf="@+id/b1"


        />

    <Button
        android:id="@+id/b3"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""
        app:layout_constraintTop_toTopOf="@+id/b1"

        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <Button
        android:id="@+id/b4"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""

        app:layout_constraintTop_toBottomOf="@+id/b1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/b5"
        app:layout_constraintStart_toStartOf="parent"

        />

    <Button
        android:id="@+id/b5"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""
        app:layout_constraintTop_toTopOf="@+id/b4"
        app:layout_constraintEnd_toStartOf="@+id/b6"
        app:layout_constraintStart_toEndOf="@+id/b4"

        />

    <Button
        android:id="@+id/b6"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toTopOf="@+id/b5"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <Button
        android:id="@+id/b7"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/b8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4"

        />

    <Button
        android:id="@+id/b8"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/b9"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toTopOf="@+id/b7"

        />

    <Button
        android:id="@+id/b9"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toTopOf="@+id/b8"

        />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/t3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b7"

        />


    <Button
        android:id="@+id/t3"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t3"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
